--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<div id="subtitle">
 
-		Su anda oynadiginiz serverin modu <span id="DarkRP">DarkRP</span> Haritasi <span id="Evocity">Rockford V2</span>
+		Su anda oynadiginiz serverin modu <span id="DarkRP">DarkRP</span> Haritasi <span id="Evocity">Evocity</span>
 
 	</div>
 
